==> AcaMilos/SSD1306_OLED_Example/Core/Src/ssd1306.c <==
#include "ssd1306.h"

uint8_t SSD1306_Init(I2C_HandleTypeDef* i2cHandler){

//	hi2c1 = *i2c;
//
//	/* Init I2C */
//	ssd1306_I2C_Init();
	/* This is done by i2c.c and i2c.h automatic generated files by STM32CubeMX
	 * and there is no necessary for us to do that here, and that's reason why above
	 * lines are commented. */

	/* Set default values */
	mySSD1306.currentX = 0;
	mySSD1306.currentY = 0;
	mySSD1306.initialized = 0;
	mySSD1306.inverted = 0;

	/* A little delay */
	uint32_t start_delay_iterator = 2500;
	while(start_delay_iterator > 0){
		start_delay_iterator--;
	}

	/*
	 *					****	Init LCD	****
	 *	For more info consult: https://cdn-shop.adafruit.com/datasheets/SSD1306.pdf
	 *	pages 28 to 32 contain tables with commands, and bellow is additional description of commands
	 *
	 *															// DEFAULT VALUES (after reset)
	 * */														// -	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xAE) != HAL_OK){	// Display OFF (sleep mode)
		return SSD1306_ERROR;
	}															// -	, double Byte command : first Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x20) != HAL_OK){ // Set Memory Addressing Mode (next sent command will adjust which one!)
		return SSD1306_ERROR;
	}															// 0x10	, double Byte command : second Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x10) != HAL_OK){ // 00 = Horizontal Addressing Mode, 01 = Vertical Addressing Mode
		return SSD1306_ERROR;														// 10,Page Addressing Mode (RESET), 11,Invalid
	}															// -	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xB0) != HAL_OK){ // Set Page Start Address for Page Addressing Mode,0-7
		return SSD1306_ERROR;														// 0xB0 = PAGE0 , ... , 0xB7 = PAGE7
	}															// 0xC0	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xC8) != HAL_OK){ // Set COM Output Scan Direction: 0xC8 = remapped mode, 0xC0 = normal mode
		return SSD1306_ERROR;														// For example, if this command is sent during normal display then the
																					// graphic display will be vertically flipped immediately
	}															// -	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x00) != HAL_OK){ // Sets lower nibble of column address (this command is only for page addressing mode)
		return SSD1306_ERROR;														// in this case 0x00 will give 0000 nibble
	}															// -	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x10) != HAL_OK){ // Set higher nibble of column address
		return SSD1306_ERROR;														// in this case 0x00 will give 0000 nibble
																					// which will result to COLUMN_0
	}															// 0x40	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x40) != HAL_OK){ // Set display start line - Set display RAM display start line register from
		return SSD1306_ERROR;														// 0-63 using lower 6 bits of this command which are in this case = 00 0000b
	}															// -	, double Byte command : first Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x81) != HAL_OK){ // Set contrast control with next command
		return SSD1306_ERROR;
	}															// 0x7F	, double Byte command : second Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x7F) != HAL_OK){ // Contrast value (RESET = 0x7F)
		return SSD1306_ERROR;														// as much this value is higher, contrast will be higher
	}															// 0xA0	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA1) != HAL_OK){ // Set segment Re-map
		return SSD1306_ERROR;														// 0xA1 = column address 127 will be mapped to SEG0
	}															// 0xA6	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA6) != HAL_OK){ // Set normal/inverse display
		return SSD1306_ERROR;														// 0xA6 = Normal, 0xA7 = Inverse
	}															// -	, double Byte command : first Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA8) != HAL_OK){ // Set multiplex ratio (from 16 to 64, 0 to 15 are invalid)
		return SSD1306_ERROR;
	}															// 0x3F	, double Byte command : second Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x3F) != HAL_OK){ // 0x3F = 63 decimally => MUX ratio =  64
		return SSD1306_ERROR;
	}															// 0xA4 , single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA4) != HAL_OK){ //0xA4 = Output follows RAM content, 0xA5 = Output ignores RAM content (ENTIRE DISPLAY ON)
		return SSD1306_ERROR;
	}															// It was just a try, and it works!!!!!
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA5) != HAL_OK){ //0xA5 = Output ignores RAM content (ENTIRE DISPLAY ON)
//			return SSD1306_ERROR;
//	}
																// -	, double Byte command : first Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xD3) != HAL_OK){ // Set display offset: set vertical shift by COM from 0d~63d
		return SSD1306_ERROR;
	}															// 0x00	, double Byte command : second Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x00) != HAL_OK){ // 0x00 = Not offset
		return SSD1306_ERROR;
	}															// -	, double Byte command : first Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xD5) != HAL_OK){ // Set display clock divide ratio/oscillator frequency
		return SSD1306_ERROR;
	}															// 0x80	, double Byte command : second Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xF0) != HAL_OK){ // divide ratio = 1, oscillator frequency = MAX
		return SSD1306_ERROR;
	}															// -	, double Byte command : first Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xD9) != HAL_OK){ // Set pre-charge period
		return SSD1306_ERROR;
	}															// 0x22	, double Byte command : second Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x22) != HAL_OK){ // phase1 and phase2 adjustment = by default
		return SSD1306_ERROR;
	}															// -	, double Byte command : first Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xDA) != HAL_OK){ // Set COM pins hardware configuration
		return SSD1306_ERROR;
	}															// 0x12	, double Byte command : second Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x12) != HAL_OK){	// => alternative COM pin configuration, disable COM left/right re-map
		return SSD1306_ERROR;
	}															// -	, double Byte command : first Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xDB) != HAL_OK){ // Set Vcomh deselect level
		return SSD1306_ERROR;
	}															// 0x20	, double Byte command : second Byte
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x20) != HAL_OK){ // =>Vcomh deselect level = 0.77xVcc
		return SSD1306_ERROR;
	}															//
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x8D) != HAL_OK){ //--set DC-DC enable
		return SSD1306_ERROR;
	}															//
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x14) != HAL_OK){ //
		return SSD1306_ERROR;
	}															// -	, single command
	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xAF) != HAL_OK){ // Turn on SSD1306 panel
		return SSD1306_ERROR;
	}


//	// Initial code like in this datasheet: https://www.texim-europe.com/getfile.ashx?id=121863
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xAE) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xD5) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x80) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA8) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x3F) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xD3) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x00) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x40) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x8D) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x14) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA1) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xC8) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xDA) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x12) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x81) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x7F) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xD9) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x22) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xDB) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x30) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA4) != HAL_OK){
//		return SSD1306_ERROR;
//	}
////	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA5) != HAL_OK){
////		return SSD1306_ERROR;	// This should show all pixels lighting if I did well understand datasheet.
////	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xA6) != HAL_OK){
//		return SSD1306_ERROR;
//	}
//	if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xAF) != HAL_OK){
//		return SSD1306_ERROR;
//	}



	/* Clear screen */
	//SSD1306_Fill(SSD1306_COLOR_BLACK);
	SSD1306_Fill(SSD1306_COLOR_WHITE);
	/* Update screen */
	SSD1306_Update_Screen(i2cHandler);


	/* After initialization if all commands have passed we can assume that SSD1306 OLED is initalized. */
	mySSD1306.initialized = 0x01;

	return mySSD1306.initialized;	// returning "0x01" as symbol that intialiyation have passed successfully
}

void SSD1306_Update_Screen(I2C_HandleTypeDef* i2cHandler) {
	uint8_t m;

	for (m = 0; m < 8; m++) {
		/* This Code is following datasheet on page 34 */
		if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0xB0 + m) != HAL_OK){
			return;
		}
		if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x00) != HAL_OK){
			return;
		}
		if(SSD1306_Send_Command(i2cHandler, mySSD1306.device_address, 0x10) != HAL_OK){
			return;
		}

		/* Write multi data */
		SSD1306_I2C_Write_Multi(i2cHandler, mySSD1306.device_address, &SSD1306_Buffer[SSD1306_WIDTH * m], SSD1306_WIDTH);
	}
}

uint8_t SSD1306_Send_Command(I2C_HandleTypeDef* i2cHandler, uint16_t device_address, uint8_t command){
//	uint8_t* command_ptr;
//	*(command_ptr) = 0x00;
//	*(command_ptr + 1) = command;
	uint8_t command_buff[2];
	command_buff[0] = 0x00;
	command_buff[1] = command;
	uint8_t command_status = 0x03;	/* If nothing responds at HAL_I2C_Master_Transmit, but it will always I assume, this will be return value. */

	command_status = HAL_I2C_Master_Transmit(i2cHandler, device_address, command_buff, 0x0002, SSD1306_I2C_TIMEOUT);
	return command_status;
}
